--- a/src/Examples/SampleTests/SampleTests.csproj
+++ b/src/Examples/SampleTests/SampleTests.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <TargetFrameworks>netcoreapp3.0;net472</TargetFrameworks>
+        <OutputType>Exe</OutputType>
         <StartupObject>SampleTests.Program</StartupObject>
     </PropertyGroup>
 
@@ -10,7 +11,7 @@
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
         <PackageReference Include="NUnit" Version="3.12.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-        <PackageReference Include="NUnitSelfRunner" Version="1.0.0" />
+        <PackageReference Include="NUnitSelfRunner" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
