--- a/src/NUnitSelfRunner/NUnitSelfRunner.csproj
+++ b/src/NUnitSelfRunner/NUnitSelfRunner.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
-        <Version>1.0.0</Version>
+        <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+        <Version>1.0.1</Version>
         <Title>NUnitSelfRunner</Title>
         <Authors>Neil Dobson</Authors>
         <Company>Barnardos Australia</Company>
